--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       run: docker build -t dockerangular .
 
     - name: Run Docker container for testing
-      run: docker run dockerangular npm test
+      run: docker run --name mycontainer dockerangular npm test
+
 
 
