--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build Docker image
       run: |
         docker build -t dockerangular .
-        docker tag dockerangular:latest
+        docker tag dockerangular:latest ${{ secrets.saralaaa }}/dockerangular:latest
 
     - name: Log in to Docker Hub
       run: docker login -u saralaaa -p ${{ secrets.dckr_pat_gWx_UJ5CQDaYYk-rTScZUAMkxL0 }}
