--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -15,12 +15,13 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build --pull --rm -f "demo-app/Dockerfile" -t dockerangular:latest -t dockerangular:latest 
+        docker build --pull --rm -f "demo-app/Dockerfile" -t dockerangular:latest "demo-app"
 
     - name: Log in to Docker Hub
       run: docker login -u saralaaa -p ${{ secrets.dckr_pat_gWx_UJ5CQDaYYk-rTScZUAMkxL0 }}
 
+    - name: Tag Docker image
+      run: docker tag dockerangular:latest ${{ secrets.saralaaa }}/dockerangular:latest
+
     - name: Push Docker image to Docker Hub
-      run: |
-        docker push saralaaa/dockerangular:latest
-        docker push saralaaa/dockerangular:<your_tag>
+      run: docker push ${{ secrets.saralaaa }}/dockerangular:latest
