--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,27 +1,62 @@
-name: CI/CD Pipeline
+name: Angular CI/CD
 
 on:
   push:
     branches:
-      - main
+      - main  # Adjust the branch name as needed
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Build Docker image
-      run: |
-        docker build --pull --rm -f "demo-app/Dockerfile" -t dockerangular:latest "demo-app"
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'  # Adjust the Node.js version as needed
 
-    - name: Log in to Docker Hub
-      run: docker login -u saralaaa -p ${{ secrets.dckr_pat_gWx_UJ5CQDaYYk-rTScZUAMkxL0 }}
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Tag Docker image
-      run: docker tag dockerangular:latest ${{ secrets.saralaaa }}/dockerangular:latest
+      - name: Build Angular App
+        run: npm run build --prod  # Adjust the build command as needed
 
-    - name: Push Docker image to Docker Hub
-      run: docker push ${{ secrets.saralaaa }}/dockerangular:latest
+      - name: Build Docker Image
+        run: docker build -t dockerangular:latest .
+
+      - name: Push Docker Image to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          username: saralaaa  # Replace with your Docker Hub username
+          password: ${{ secrets.dckr_pat_gWx_UJ5CQDaYYk-rTScZUAMkxL0 }}  # Use a Docker Hub access token stored as a secret
+          repository: saralaaa/dockerangular
+          tags: latest
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check if container exists
+        run: |
+          CONTAINER_NAME="dockerangular_container"
+          if docker ps -a --format '{{.Names}}' | grep -q "${CONTAINER_NAME}"; then
+            echo "Container ${CONTAINER_NAME} exists"
+          else
+            echo "Container ${CONTAINER_NAME} does not exist"
+            exit 1
+          fi
+
+      - name: Stop and remove container if it exists
+        run: |
+          docker stop dockerangular_container || true
+          docker rm dockerangular_container || true
+
+      - name: Pull Docker image
+        run: docker pull saralaaa/dockerangular:latest
+
+      - name: Deploy Docker Container
+        run: docker run -d -p 80:80 --name dockerangular_container saralaaa/dockerangular:latest
