--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -34,14 +34,15 @@ jobs:
           password: ${{ secrets.dckr_pat_gWx_UJ5CQDaYYk-rTScZUAMkxL0 }}  # Use a Docker Hub access token stored as a secret
           repository: saralaaa/dockerangular
           tags: latest
-
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
+   needs: build
+   runs-on: ubuntu-latest
+   steps:
+    - name: Log in to Docker Hub
+      run: docker login -u saralaaa -p ${{ secrets.DOCKERHUB_TOKEN }}
 
-    steps:
-      - name: Pull Docker image
-        run: docker pull saralaaa/dockerangular:latest
+    - name: Pull Docker image
+      run: docker pull saralaaa/dockerangular:latest
 
-      - name: Deploy Docker Container
-        run: docker run -d -p 80:80 --name dockerangular_container saralaaa/dockerangular:latest
+    - name: Deploy Docker Container
+      run: docker run -d -p 80:80 --name dockerangular_container saralaaa/dockerangular:latest
