--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -41,6 +41,9 @@ jobs:
     steps:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.dckr_pat_gWx_UJ5CQDaYYk-rTScZUAMkxL0 }}" | docker login -u saralaaa --password-stdin
+        env:
+          DOCKER_CLI_EXPERIMENTAL: enabled
+        tty: true
 
       - name: Pull Docker image
         run: docker pull saralaaa/dockerangular:latest
