--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -27,21 +27,16 @@ jobs:
       - name: Build Docker Image
         run: docker build -t dockerangular:latest .
 
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u saralaaa --password-stdin
+
       - name: Push Docker Image to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          username: saralaaa  # Replace with your Docker Hub username
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Use a Docker Hub access token stored as a secret
-          repository: saralaaa/dockerangular
-          tags: latest
+        run: docker push saralaaa/dockerangular:latest
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Log in to Docker Hub
-        run: docker login -u ${{ secrets.saralaaa }} -p ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Pull Docker image
         run: docker pull saralaaa/dockerangular:latest
 
